[gd_scene load_steps=11 format=2]

[ext_resource path="res://characters/enemies/base/EnemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/enemies/metall/Metall.png" type="Texture" id=2]
[ext_resource path="res://characters/enemies/metall/metall_state_machine.gd" type="Script" id=3]
[ext_resource path="res://characters/enemies/metall/shoot.gd" type="Script" id=4]
[ext_resource path="res://characters/enemies/metall/idle.gd" type="Script" id=5]
[ext_resource path="res://characters/enemies/metall/trigger_area.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
resource_local_to_scene = true
extents = Vector2( 9, 5 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
length = 0.8
step = 0.16
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 0 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 80.0

[node name="EnemyMetall" index="0" instance=ExtResource( 1 )]
hit_points_max = 1

[node name="CollisionShape2D" parent="Area2D" index="0"]
shape = SubResource( 1 )

[node name="Sprite" parent="." index="1"]
texture = ExtResource( 2 )
hframes = 2
frame = 0

[node name="PreciseVisibilityNotifier2D" parent="." index="3"]
rect = Rect2( -9, -10, 18, 16 )

[node name="EnemyAnimations" type="AnimationPlayer" parent="." index="4"]
anims/idle = SubResource( 2 )
anims/shoot = SubResource( 3 )

[node name="SFX" parent="." index="6"]
editor/display_folded = true

[node name="Timer" type="Timer" parent="." index="7"]
process_mode = 0
wait_time = 3.0
autostart = true

[node name="StateMachine" parent="." index="8"]
script = ExtResource( 3 )
start_state = NodePath("Idle")

[node name="Shoot" type="Node" parent="StateMachine" index="1"]
script = ExtResource( 4 )

[node name="Idle" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 5 )

[node name="TriggerArea" type="Area2D" parent="." index="9"]
visible = false
collision_mask = 2
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="TriggerArea" index="0"]
shape = SubResource( 4 )
[connection signal="animation_finished" from="EnemyAnimations" to="StateMachine" method="_on_animation_finished"]
[connection signal="timeout" from="Timer" to="StateMachine/Idle" method="on_Timer_timeout"]
[connection signal="body_entered" from="TriggerArea" to="TriggerArea" method="on_body_entered"]
[connection signal="body_exited" from="TriggerArea" to="TriggerArea" method="on_body_exited"]
